--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorBlack">#000000</color>
     <color name="colorGrey">#808080</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="Red">#FF0000</color>
 </resources>
