--- a/app/src/main/res/layout/aboutus.xml
+++ b/app/src/main/res/layout/aboutus.xml
@@ -33,10 +33,8 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:src="@drawable/logo" />
-
-
 
 
         <TextView
@@ -59,17 +57,6 @@
             android:text="Our mission is to serve people a sumptuous meal without any hassle! We intend on making food delivery an easy and convenient option for all our food lovers!"
             android:textColor="@color/colorBlack"
             android:textSize="15dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="serif-monospace"
-            android:padding="10dp"
-            android:text=""
-            android:textColor="@color/colorBlack"
-            android:textSize="25dp"
             android:textStyle="bold" />
 
 
@@ -127,6 +114,37 @@
             android:textColor="@color/colorBlack"
             android:textSize="15dp"
             android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="serif-monospace"
+            android:padding="10dp"
+            android:text=""
+            android:textColor="@color/colorBlack"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="serif-monospace"
+            android:padding="10dp"
+            android:text=""
+            android:textColor="@color/colorBlack"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="139dp"
+            android:layout_height="62dp"
+            android:layout_gravity="center"
+
+            android:text="Button"
+            />
 
     </LinearLayout>
 
