--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -153,4 +153,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imgView1"
+        android:layout_width="47dp"
+        android:layout_height="45dp"
+        app:srcCompat="@drawable/ic_info"
+        tools:layout_editor_absoluteX="357dp"
+        tools:layout_editor_absoluteY="6dp"
+        tools:ignore="MissingConstraints,VectorDrawableCompat" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
