--- a/app/src/main/res/layout/restaurant_foods.xml
+++ b/app/src/main/res/layout/restaurant_foods.xml
@@ -49,8 +49,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.008"
-        app:srcCompat="@drawable/arabic" />
+        app:layout_constraintVertical_bias="0.008" />
 
     <TextView
         android:id="@+id/restaurantDescription"
