--- a/app/src/main/res/layout/food_details.xml
+++ b/app/src/main/res/layout/food_details.xml
@@ -103,4 +103,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/txtRM"
         app:layout_constraintTop_toBottomOf="@+id/selected_food_desciption" />
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnAddtoCart" />
 </androidx.constraintlayout.widget.ConstraintLayout>
