--- a/app/src/main/res/layout/restaurant_foods.xml
+++ b/app/src/main/res/layout/restaurant_foods.xml
@@ -69,11 +69,11 @@
         android:id="@+id/food_list"
         android:layout_width="409dp"
         android:layout_height="0dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/restaurantDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/backbutton" />
 
     <Button
         android:id="@+id/backbutton"
